[package]
name = "ifrs"
version = "0.1.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@larthia.com>"]
description = "A network interface information tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/awgn/ifrs"
readme = "README.md"
keywords = ["network", "interface", "linux", "macos", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
smol_str = "0.2"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
owo-colors = "4.0.0"
anyhow = "1.0"
regex = "1.10"
libc = "0.2"
nix = { version = "0.27", features = ["ioctl", "net", "fs", "sched", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[dependencies.pci-info]
version = "0.3"
optional = true

[features]
default = ["pci-info"]
