[package]
name = "ifrs"
version = "0.1.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@larthia.com>"]
description = "A network interface information tool"
repository = "https://github.com/awgn/ifrs"
license = "MIT OR Apache-2.0"
keywords = ["network", "interface", "linux", "macos", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["ioctl", "net", "fs", "sched", "user"] }
serde = { version = "1.0", features = ["derive"] }
smol_str = "0.2"
libc = "0.2"
pci-info = "0.1"
rayon = "1.10"
owo-colors = "4.0"
anyhow = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
ethtool = "0.2.9"
tokio = { version = "1.44", features = ["rt", "macros"] }
futures = "0.3"
rtnetlink = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
serde_json = "1.0"

[features]
default = []
